#237 Remove uses of javax.xml.bind
Replaced with use of java.util.Base64

Change-Id: I4bdd0e0c7fc8c4e72446a0eb8424483d9557f998
Signed-off-by: Erwann Traisnel <erwann.traisnel@obeo.fr>